--- a/ex1.html
+++ b/ex1.html
@@ -14,24 +14,26 @@
     
 
     <div class="container">
+        
         <div>
-            <h1 class="sub">Sobre Mim</h1>
+        <hr>
+        <h1 class="sub">Sobre Mim</h1>
         <p>Meu nome é Lanna Carmo de Oliveira, tenho 15 anos e nasci em São Paulo (SP). 
         Moro no bairro Guarapiranga, em um apartamento com meus pais, dois irmãos 
         (meu irmão mais velho, de 18 anos, mudou-se recentemente para o 
         Rio de Janeiro para cursar faculdade de Psicologia) e tenho três cachorros. </p></div>
    
 
-    <img src="IMG_20250608_130548.jpg" alt="Foto minha" width="250" height="400" class="imagemFoto">
+    <img src="IMG_20250608_130548.jpg" alt="Foto minha" class="Foto">
     </div>
 <hr>
     <h1 class="sub">Curiosidades</h1>
-        <ol type="a">
+        <ul type="square">
             <li>Trato meus cachorros como filhos</li>
             <li>Já fiz aulas de violino mas tive que sair por conta da Germinare</li>
             <li>Amo usar Crocs, queria ter todos os existentes</li>
             <li>Ganhei medalha de ouro na competição de corrida no Sesc</li>
-        </ol>
+        </ul>
 <hr>
     <h1 class="sub">Lugares Que Já Conheci</h1>
     <ul type="square">
@@ -42,14 +44,14 @@
     </ul>
 <hr>
     <h1 class="sub">Lugares Que Quero Conhecer</h1>
-    <ol type="I">
+    <ul type="square">
         <li>Disney</li>
         <li>Paris</li>
         <li>New York</li>
         <li>Bariloche</li>
         <li>Campos do Jordão</li>
-    </ol>
-<hr>
+    </ul>
+<hr class="hr">
 </div>
 </body>
 </html>
