--- a/filme1.html
+++ b/filme1.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Toy Story</title>
+    <title>Moana: Um Mar de Aventuras</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/73DEEEC5C4139514C5E579B02CE910D148A5CD21E6583F2E42071DDA3FC3ACBE/scale?width=506&aspectRatio=2.00&format=webp">
 </head>
@@ -21,16 +21,18 @@
     <div class="main-content">
 
         <div class="container">
-            <h1>Toy Story (1995)</h1>
+            <h1>Moana: Um Mar de Aventuras</h1>
             
-            <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/73DEEEC5C4139514C5E579B02CE910D148A5CD21E6583F2E42071DDA3FC3ACBE/scale?width=506&aspectRatio=2.00&format=webp" alt="TOY STORY"><br><br>
+            <img src="c:\Users\lannaoliveira-ieg\Downloads\unnamed.jpg" alt="Moana: Um Mar de Aventuras"><br><br>
 
-            <h2>RESENHA</h2>
-            <p>"Toy Story" é um clássico da animação lançado em 1995 e o primeiro longa-metragem totalmente feito por computação gráfica. A história gira em torno de Woody, um vaqueiro de brinquedo que lidera os outros brinquedos do quarto de Andy. A chegada de um novo brinquedo moderno, o astronauta Buzz Lightyear, causa ciúmes e conflitos, mas logo eles precisam unir forças para voltar para casa. Com humor, emoção e mensagens sobre amizade e aceitação, Toy Story encantou públicos de todas as idades e marcou o início do sucesso da Pixar.
-            </p>
+            <h2>Sobre a Resenha</h2>
+            <p>"Uma jovem parte em uma missão para salvar seu povo. Durante a jornada, Moana conhece 
+                o outrora poderoso semideus Maui, que a guia em sua busca para se tornar 
+                uma mestre em encontrar caminhos. Juntos, eles navegam pelo oceano 
+                em uma viagem incrível."</p>
 
-            <h3>NOTA</h3>
-            <p>Nota do grupo: 9/10</p>
+            <h3>Minha Nota</h3>
+            <p>Nota: 10/10</p>
         </div> 
 
     </div> 
