--- a/entrar.html
+++ b/entrar.html
@@ -13,27 +13,27 @@
         <div class="perfil-list">
             
             <a href="index.html" class="perfil-card">
-                <img src="net Perfil lanna.png" alt="perfil1">
+                <img src="imagens/net Perfil lanna.png" alt="perfil1">
                 <span>Lanna</span>
             </a>
             
             <a href="index.html" class="perfil-card">
-                <img src="netPerfil2.png" alt="perfil2">
+                <img src="imagens/netPerfil2.png" alt="perfil2">
                 <span>Perfil 2</span>
             </a>
 
             <a href="index.html" class="perfil-card">
-                <img src="netPerfil3.png" alt="perfil3">
+                <img src="imagens/netPerfil3.png" alt="perfil3">
                 <span>Perfil 3</span>
             </a>
 
             <a href="index.html" class="perfil-card">
-                <img src="netPerfil4.png" alt="perfil4">
+                <img src="imagens/netPerfil4.png" alt="perfil4">
                 <span>Perfil 4</span>
             </a>
 
             <a href="index.html" class="perfil-card">
-                <img src="netPerfil5.png" alt="perfil5">
+                <img src="imagens/netPerfil5.png" alt="perfil5">
                 <span>Perfil 5</span>
             </a>
 
