--- a/ex1.html
+++ b/ex1.html
@@ -24,7 +24,7 @@
         Rio de Janeiro para cursar faculdade de Psicologia) e tenho três cachorros. </p></div>
    
 
-    <img src="IMG_20250608_130548.jpg" alt="Foto minha" class="Foto">
+    <img src="imagens/IMG_20250608_130548.jpg" alt="Foto minha" class="Foto">
     </div>
 <hr>
     <h1 class="sub">Curiosidades</h1>
