--- a/filme2.html
+++ b/filme2.html
@@ -12,7 +12,7 @@
 
     <nav class="main-nav">
         <a href="index.html">
-            <img src="Gemini_Generated_Image_g8opwxg8opwxg8op (1).png" class="logo" alt="Filmeflix Logo">
+            <img src="imagens/procurando-o-nemo.jpeg" class="logo" alt="Filmeflix Logo">
         </a>
         <ul>
             <li><a href="ex1.html">Sobre Mim</a></li>
