--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <div class="filme-row">
                 
                 <div class="imagemFilme">
-                    <img src="moana.jpg" alt="Filme 1">
+                    <img src="imagens/moana.jpg" alt="Filme 1">
                     <h3>Moana: Um Mar de Aventuras </h3>
                     <a href="https://www.imdb.com/pt/title/tt0114709/?ref_=chttp_tsp_i" style="color: rgb(124, 45, 139);">IMDB</a>
                     <a href="filme1.html" style="color: rgb(186, 0, 242);">Saiba Mais</a>
                 </div>
 
                 <div class="imagemFilme">
-                    <img src="avatar.jpeg" alt="Filme 2">
+                    <img src="imagens/avatar.jpeg" alt="Filme 2">
                     <h3>Avatar</h3>
                     <a href="https://www.imdb.com/pt/title/tt14961016/?ref_=fn_all_ttl_1" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
 
-                <div class="imagemFilme">
+                <div class="imagens/imagemFilme">
                     <img src="lilo-e-stitch.jpeg" alt="Filme 3">
                     <h3>Lilo e Stitch</h3>
                     <a href="https://www.imdb.com/title/tt4154796/" style="color: rgb(124, 45, 139);">IMDB</a>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="imagemFilme">
-                    <img src="a-casa-monstro.jpeg" alt="Filme 5">
+                    <img src="imagens/a-casa-monstro.jpeg" alt="Filme 5">
                     <h3>A casa monstro</h3>
                     <a href="https://www.imdb.com/pt/video/vi3113877785/?playlistId=tt0385880&ref_=tt_ov_pr_ov_vi" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
@@ -66,20 +66,20 @@
             <div class="filme-row">
                 
                 <div class="imagemFilme">
-                    <img src="procurando-o-nemo.jpeg" alt="Viva">
+                    <img src="imagens/procurando-o-nemo.jpeg" alt="Viva">
                     <h3>Procurando o Nemo</h3>
                     <a href="https://www.imdb.com/pt/video/vi2687214105/?playlistId=tt0266543&ref_=tt_ov_pr_ov_vi" style="color: rgb(124, 45, 139);">IMDB</a>
                     <a href="filme2.html" style="color: rgb(186, 0, 242);">Saiba Mais</a> 
                 </div>
 
                 <div class="imagemFilme">
-                    <img src="homem-aranha.jpg" alt="Filme 7">
+                    <img src="imagens/homem-aranha.jpg" alt="Filme 7">
                     <h3>Homem-Aranha</h3>
                     <a href="https://www.imdb.com/pt/video/vi1376109081/?playlistId=tt0145487&ref_=tt_ov_pr_ov_vi" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
 
                 <div class="imagemFilme">
-                    <img src="a-culpa-e-das-estrelas.jpeg" alt="Filme 8">
+                    <img src="imagens/a-culpa-e-das-estrelas.jpeg" alt="Filme 8">
                     <h3>A Culpa É das Estrelas</h3>
                     <a href="https://www.imdb.com/pt/video/vi2313071897/?playlistId=tt2582846&ref_=tt_ov_ov_vi" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="imagemFilme">
-                    <img src="as-branquelas.jpeg" alt="Filme 10">
+                    <img src="imagens/as-branquelas.jpeg" alt="Filme 10">
                     <h3>As Branquelas</h3>
                     <a href="https://www.imdb.com/pt/video/vi1608646937/?playlistId=tt0381707&ref_=tt_ov_ov_vi" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
