--- a/filme1.html
+++ b/filme1.html
@@ -23,7 +23,7 @@
         <div class="container">
             <h1>Moana: Um Mar de Aventuras</h1>
             
-            <img src="c:\Users\lannaoliveira-ieg\Downloads\unnamed.jpg" alt="Moana: Um Mar de Aventuras"><br><br>
+            <img src="imagens/moana.jpg" alt="Moana: Um Mar de Aventuras"><br><br>
 
             <h2>Sobre a Resenha</h2>
             <p>"Uma jovem parte em uma missão para salvar seu povo. Durante a jornada, Moana conhece 
