Juntei o 'Style1.css' com o 'style.css'

--- a/filme1.html
+++ b/filme1.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Moana: Um Mar de Aventuras</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/73DEEEC5C4139514C5E579B02CE910D148A5CD21E6583F2E42071DDA3FC3ACBE/scale?width=506&aspectRatio=2.00&format=webp">
+    <link rel="icon" href="/imagens/moana.jpg">
 </head>
 <body>
 
     <nav class="main-nav">
         <a href="index.html">
-            <img src="Gemini_Generated_Image_g8opwxg8opwxg8op (1).png" class="logo" alt="Filmeflix Logo">
+            <img src="imagens/FilmeFlix (1).png" class="logo" alt="Filmeflix Logo">
         </a>
         <ul>
             <li><a href="ex1.html">Sobre Mim</a></li>
