--- a/filme2.html
+++ b/filme2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Procurando o Nemo</title>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="/imagens/FilmeFlix (1).png">
     
     <link rel="stylesheet" href="style.css">
 
@@ -12,7 +12,7 @@
 
     <nav class="main-nav">
         <a href="index.html">
-            <img src="imagens/procurando-o-nemo.jpeg" class="logo" alt="Filmeflix Logo">
+            <img src="imagens/FilmeFlix (1).png" class="logo" alt="Filmeflix Logo">
         </a>
         <ul>
             <li><a href="ex1.html">Sobre Mim</a></li>
