--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Germinaflix</title>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="/imagens/FilmeFlix (1).png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav class="main-nav">
         <a href="index.html">
-            <img src="Gemini_Generated_Image_g8opwxg8opwxg8op (1).png" class="logo" alt="Filmeflix Logo">
+            <img src="imagens/FilmeFlix (1).png" class="logo" alt="Filmeflix Logo">
         </a>
         <ul>
             <li><a href="ex1.html">Sobre Mim</a></li>
@@ -38,8 +38,8 @@
                     <a href="https://www.imdb.com/pt/title/tt14961016/?ref_=fn_all_ttl_1" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
 
-                <div class="imagens/imagemFilme">
-                    <img src="lilo-e-stitch.jpeg" alt="Filme 3">
+                <div class="imagemFilme">
+                    <img src="imagens/lilo-e-stitch.jpeg" alt="Filme 3">
                     <h3>Lilo e Stitch</h3>
                     <a href="https://www.imdb.com/title/tt4154796/" style="color: rgb(124, 45, 139);">IMDB</a>
                 </div>
@@ -99,7 +99,7 @@
             </div> 
         </section>
 
-        <footer> &copy; Germinaflix</footer>
+        <footer> &copy; FilmeFlix</footer>
 
     </div> 
 </body>
