--- a/filme2.html
+++ b/filme2.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h1>Procurando o Nemo</h1>
             
-            <img src="c:\Users\lannaoliveira-ieg\Downloads\Procurando o Nemo.jpeg" alt="Viva">
+            <img src="imagens/procurando-o-nemo.jpeg" alt="Procurando o Nemo">
             
             <br><br> <h2>Sobre a Resenha</h2>
             <p>"Em seu primeiro dia de aula, Nemo é capturado por um mergulhador e 
