Arrumando o margin do sobre mim

--- a/ex1.html
+++ b/ex1.html
@@ -38,7 +38,7 @@
     </div>
 <hr>
     <h1 class="sub">Curiosidades</h1>
-        <ul type="square">
+        <ul type="square" class="lista">
             <li>Trato meus cachorros como filhos</li>
             <li>Já fiz aulas de violino mas tive que sair por conta da Germinare</li>
             <li>Amo usar Crocs, queria ter todos os existentes</li>
@@ -46,7 +46,7 @@
         </ul>
 <hr>
     <h1 class="sub">Lugares Que Já Conheci</h1>
-    <ul type="square">
+    <ul type="square" class="lista">
         <li>Recife</li>
         <li>Bahia</li>
         <li>Rio de Janeiro</li>
@@ -54,7 +54,7 @@
     </ul>
 <hr>
     <h1 class="sub">Lugares Que Quero Conhecer</h1>
-    <ul type="square">
+    <ul type="square" class="lista">
         <li>Disney</li>
         <li>Paris</li>
         <li>New York</li>
