--- a/filme1.html
+++ b/filme1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Moana: Um Mar de Aventuras</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/imagens/moana.jpg">
+    <link rel="icon" href="/imagens/FilmeFlix (1).png">
 </head>
 <body>
 
